# srdfdom

./: .clang-format  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py  srdfdom.repos  urdfdom_compatibility.h.in
.github/workflows/: format.yml  industrial_ci_action.yml  prerelease.yml
cmake/: Findtinyxml.cmake  SearchForTinyXML.cmake
cmake/pkgconfig/: srdfdom.pc.in
include/srdf/: model.h
include/srdfdom/: model.h  srdf_writer.h  visibility_control.h
scripts/: display_srdf  srdf_linter.py
src/: model.cpp  srdf_writer.cpp  trim.h
src/srdfdom/: srdf.py
srdfdom/: srdf.py
test/: srdf_parser.test  srdf_parser_cpp.test  test.py  test_parser.cpp
test/resources/: pr2_desc.3-normalized.srdf  pr2_desc.3.srdf  pr2_desc.urdf
